Bug 412864 - Latte dock crashed when changing layout
Summary: Latte dock crashed when changing layout
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: 0.9.4
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2019-10-12 01:24 UTC by Karmanyaah Malhotra
Modified: 2019-11-13 14:24 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.5
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (18.81 KB, text/plain)
2019-10-17 14:40 UTC, Leandro
Details
New crash information added by DrKonqi (9.60 KB, text/plain)
2019-11-06 15:29 UTC, John
Details
New crash information added by DrKonqi (17.54 KB, text/plain)
2019-11-06 15:58 UTC, Eve Kaczmarek
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Karmanyaah Malhotra 2019-10-12 01:24:01 UTC
Application: latte-dock (0.9.3)

Qt Version: 5.13.1
Frameworks Version: 5.62.0
Operating System: Linux 5.3.5-arch1-1-ARCH x86_64
Distribution: "EndeavourOS Linux"

-- Information about the crash:
- What I was doing when the application crashed:

When I was changing the layout from either the right click menu and the customize layouts menu, Latte crashed.

The crash can be reproduced every time.

-- Backtrace:
Application: Latte Dock (latte-dock), signal: Segmentation fault
Using host libthread_db library "/usr/lib/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f185def9e40 (LWP 19673))]

Thread 6 (Thread 0x7f183ffff700 (LWP 19693)):
#0  0x00007f18619a0c45 in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
#1  0x00007f1862b41660 in QWaitCondition::wait(QMutex*, QDeadlineTimer) () at /usr/lib/libQt5Core.so.5
#2  0x00007f1862b41752 in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#3  0x00007f1864815dad in  () at /usr/lib/libQt5Quick.so.5
#4  0x00007f186481605e in  () at /usr/lib/libQt5Quick.so.5
#5  0x00007f1862b3b5b0 in  () at /usr/lib/libQt5Core.so.5
#6  0x00007f186199a4cf in start_thread () at /usr/lib/libpthread.so.0
#7  0x00007f18626672d3 in clone () at /usr/lib/libc.so.6

Thread 5 (Thread 0x7f184ee22700 (LWP 19688)):
#0  0x00007f18619a0c45 in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
#1  0x00007f184f44366c in  () at /usr/lib/dri/i965_dri.so
#2  0x00007f184f443268 in  () at /usr/lib/dri/i965_dri.so
#3  0x00007f186199a4cf in start_thread () at /usr/lib/libpthread.so.0
#4  0x00007f18626672d3 in clone () at /usr/lib/libc.so.6

Thread 4 (Thread 0x7f1855633700 (LWP 19687)):
#0  0x00007f186265c9ef in poll () at /usr/lib/libc.so.6
#1  0x00007f1860a6e180 in  () at /usr/lib/libglib-2.0.so.0
#2  0x00007f1860a6e251 in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#3  0x00007f1862d61a1c in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#4  0x00007f1862d084ec in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#5  0x00007f1862b3a385 in QThread::exec() () at /usr/lib/libQt5Core.so.5
#6  0x00007f18644ac849 in  () at /usr/lib/libQt5Qml.so.5
#7  0x00007f1862b3b5b0 in  () at /usr/lib/libQt5Core.so.5
#8  0x00007f186199a4cf in start_thread () at /usr/lib/libpthread.so.0
#9  0x00007f18626672d3 in clone () at /usr/lib/libc.so.6

Thread 3 (Thread 0x7f1857fff700 (LWP 19680)):
#0  0x00007f186265c9ef in poll () at /usr/lib/libc.so.6
#1  0x00007f1860a6e180 in  () at /usr/lib/libglib-2.0.so.0
#2  0x00007f1860a6e251 in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#3  0x00007f1862d61a1c in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#4  0x00007f1862d084ec in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#5  0x00007f1862b3a385 in QThread::exec() () at /usr/lib/libQt5Core.so.5
#6  0x00007f1862ff2b37 in  () at /usr/lib/libQt5DBus.so.5
#7  0x00007f1862b3b5b0 in  () at /usr/lib/libQt5Core.so.5
#8  0x00007f186199a4cf in start_thread () at /usr/lib/libpthread.so.0
#9  0x00007f18626672d3 in clone () at /usr/lib/libc.so.6

Thread 2 (Thread 0x7f185d0f0700 (LWP 19676)):
#0  0x00007f186265c9ef in poll () at /usr/lib/libc.so.6
#1  0x00007f1864c33630 in  () at /usr/lib/libxcb.so.1
#2  0x00007f1864c352db in xcb_wait_for_event () at /usr/lib/libxcb.so.1
#3  0x00007f185dab6101 in  () at /usr/lib/libQt5XcbQpa.so.5
#4  0x00007f1862b3b5b0 in  () at /usr/lib/libQt5Core.so.5
#5  0x00007f186199a4cf in start_thread () at /usr/lib/libpthread.so.0
#6  0x00007f18626672d3 in clone () at /usr/lib/libc.so.6

Thread 1 (Thread 0x7f185def9e40 (LWP 19673)):
[KCrash Handler]
#5  0x000055fb60ce97f6 in Latte::Corona::availableScreenRectWithCriteria(int, QList<Latte::Types::Visibility>, QList<Plasma::Types::Location>) const ()
#6  0x000055fb60dcca83 in Latte::WindowSystem::Tracker::Windows::updateAvailableScreenGeometries() ()
#7  0x00007f1862d35b70 in QMetaObject::activate(QObject*, int, int, void**) () at /usr/lib/libQt5Core.so.5
#8  0x00007f1862d35b70 in QMetaObject::activate(QObject*, int, int, void**) () at /usr/lib/libQt5Core.so.5
#9  0x000055fb60cd6e63 in Latte::Corona::availableScreenRectChangedFrom(Latte::View*) ()
#10 0x00007f1862d35b70 in QMetaObject::activate(QObject*, int, int, void**) () at /usr/lib/libQt5Core.so.5
#11 0x000055fb60ce1b8b in Latte::ViewPart::Effects::qt_metacall(QMetaObject::Call, int, void**) ()
#12 0x00007f186440a346 in QQmlPropertyPrivate::write(QObject*, QQmlPropertyData const&, QVariant const&, QQmlContextData*, QFlags<QQmlPropertyData::WriteFlag>) () at /usr/lib/libQt5Qml.so.5
#13 0x00007f18644d1ee8 in  () at /usr/lib/libQt5Qml.so.5
#14 0x00007f186440aed9 in QQmlPropertyPrivate::write(QObject*, QQmlPropertyData const&, QVariant const&, QQmlContextData*, QFlags<QQmlPropertyData::WriteFlag>) () at /usr/lib/libQt5Qml.so.5
#15 0x00007f18644806e5 in QQmlBinding::slowWrite(QQmlPropertyData const&, QQmlPropertyData const&, QV4::Value const&, bool, QFlags<QQmlPropertyData::WriteFlag>) () at /usr/lib/libQt5Qml.so.5
#16 0x00007f1864481861 in  () at /usr/lib/libQt5Qml.so.5
#17 0x00007f1864482c5d in  () at /usr/lib/libQt5Qml.so.5
#18 0x00007f186447f3a4 in QQmlBinding::update(QFlags<QQmlPropertyData::WriteFlag>) () at /usr/lib/libQt5Qml.so.5
#19 0x00007f186445b43e in QQmlNotifier::emitNotify(QQmlNotifierEndpoint*, void**) () at /usr/lib/libQt5Qml.so.5
#20 0x00007f18643f84ff in QQmlData::signalEmitted(QAbstractDeclarativeData*, QObject*, int, void**) () at /usr/lib/libQt5Qml.so.5
#21 0x00007f1862d352eb in QMetaObject::activate(QObject*, int, int, void**) () at /usr/lib/libQt5Core.so.5
#22 0x00007f18643f3fb2 in QQmlVMEMetaObject::metaCall(QObject*, QMetaObject::Call, int, void**) () at /usr/lib/libQt5Qml.so.5
#23 0x00007f186440a346 in QQmlPropertyPrivate::write(QObject*, QQmlPropertyData const&, QVariant const&, QQmlContextData*, QFlags<QQmlPropertyData::WriteFlag>) () at /usr/lib/libQt5Qml.so.5
#24 0x00007f18644d1ee8 in  () at /usr/lib/libQt5Qml.so.5
#25 0x00007f186440aed9 in QQmlPropertyPrivate::write(QObject*, QQmlPropertyData const&, QVariant const&, QQmlContextData*, QFlags<QQmlPropertyData::WriteFlag>) () at /usr/lib/libQt5Qml.so.5
#26 0x00007f18644806e5 in QQmlBinding::slowWrite(QQmlPropertyData const&, QQmlPropertyData const&, QV4::Value const&, bool, QFlags<QQmlPropertyData::WriteFlag>) () at /usr/lib/libQt5Qml.so.5
#27 0x00007f1864481861 in  () at /usr/lib/libQt5Qml.so.5
#28 0x00007f1864482c5d in  () at /usr/lib/libQt5Qml.so.5
#29 0x00007f186447f3a4 in QQmlBinding::update(QFlags<QQmlPropertyData::WriteFlag>) () at /usr/lib/libQt5Qml.so.5
#30 0x00007f186445b43e in QQmlNotifier::emitNotify(QQmlNotifierEndpoint*, void**) () at /usr/lib/libQt5Qml.so.5
#31 0x00007f18643f84ff in QQmlData::signalEmitted(QAbstractDeclarativeData*, QObject*, int, void**) () at /usr/lib/libQt5Qml.so.5
#32 0x00007f1862d352eb in QMetaObject::activate(QObject*, int, int, void**) () at /usr/lib/libQt5Core.so.5
#33 0x00007f18643f3fb2 in QQmlVMEMetaObject::metaCall(QObject*, QMetaObject::Call, int, void**) () at /usr/lib/libQt5Qml.so.5
#34 0x00007f186440a346 in QQmlPropertyPrivate::write(QObject*, QQmlPropertyData const&, QVariant const&, QQmlContextData*, QFlags<QQmlPropertyData::WriteFlag>) () at /usr/lib/libQt5Qml.so.5
#35 0x00007f18644d1ee8 in  () at /usr/lib/libQt5Qml.so.5
#36 0x00007f186440aed9 in QQmlPropertyPrivate::write(QObject*, QQmlPropertyData const&, QVariant const&, QQmlContextData*, QFlags<QQmlPropertyData::WriteFlag>) () at /usr/lib/libQt5Qml.so.5
#37 0x00007f18644806e5 in QQmlBinding::slowWrite(QQmlPropertyData const&, QQmlPropertyData const&, QV4::Value const&, bool, QFlags<QQmlPropertyData::WriteFlag>) () at /usr/lib/libQt5Qml.so.5
#38 0x00007f1864481861 in  () at /usr/lib/libQt5Qml.so.5
#39 0x00007f1864482c5d in  () at /usr/lib/libQt5Qml.so.5
#40 0x00007f186447f3a4 in QQmlBinding::update(QFlags<QQmlPropertyData::WriteFlag>) () at /usr/lib/libQt5Qml.so.5
#41 0x00007f186445b43e in QQmlNotifier::emitNotify(QQmlNotifierEndpoint*, void**) () at /usr/lib/libQt5Qml.so.5
#42 0x00007f18643f84ff in QQmlData::signalEmitted(QAbstractDeclarativeData*, QObject*, int, void**) () at /usr/lib/libQt5Qml.so.5
#43 0x00007f1862d352eb in QMetaObject::activate(QObject*, int, int, void**) () at /usr/lib/libQt5Core.so.5
#44 0x00007f184e584bbf in  () at /usr/lib/qt/qml/org/kde/plasma/core/libcorebindingsplugin.so
#45 0x00007f1862d35b70 in QMetaObject::activate(QObject*, int, int, void**) () at /usr/lib/libQt5Core.so.5
#46 0x00007f1864bb7780 in  () at /usr/lib/libKF5Plasma.so.5
#47 0x00007f1864bb7b25 in Plasma::FrameSvg::setImagePath(QString const&) () at /usr/lib/libKF5Plasma.so.5
#48 0x00007f184e58504e in  () at /usr/lib/qt/qml/org/kde/plasma/core/libcorebindingsplugin.so
#49 0x00007f184e5629f6 in  () at /usr/lib/qt/qml/org/kde/plasma/core/libcorebindingsplugin.so
#50 0x00007f186448250f in  () at /usr/lib/libQt5Qml.so.5
#51 0x00007f1864482c5d in  () at /usr/lib/libQt5Qml.so.5
#52 0x00007f186447f3a4 in QQmlBinding::update(QFlags<QQmlPropertyData::WriteFlag>) () at /usr/lib/libQt5Qml.so.5
#53 0x00007f186445b43e in QQmlNotifier::emitNotify(QQmlNotifierEndpoint*, void**) () at /usr/lib/libQt5Qml.so.5
#54 0x00007f18643f84ff in QQmlData::signalEmitted(QAbstractDeclarativeData*, QObject*, int, void**) () at /usr/lib/libQt5Qml.so.5
#55 0x00007f1862d352eb in QMetaObject::activate(QObject*, int, int, void**) () at /usr/lib/libQt5Core.so.5
#56 0x00007f18643f3fb2 in QQmlVMEMetaObject::metaCall(QObject*, QMetaObject::Call, int, void**) () at /usr/lib/libQt5Qml.so.5
#57 0x00007f18644822b3 in  () at /usr/lib/libQt5Qml.so.5
#58 0x00007f1864482c5d in  () at /usr/lib/libQt5Qml.so.5
#59 0x00007f186447f3a4 in QQmlBinding::update(QFlags<QQmlPropertyData::WriteFlag>) () at /usr/lib/libQt5Qml.so.5
#60 0x00007f186445b43e in QQmlNotifier::emitNotify(QQmlNotifierEndpoint*, void**) () at /usr/lib/libQt5Qml.so.5
#61 0x00007f18643f84ff in QQmlData::signalEmitted(QAbstractDeclarativeData*, QObject*, int, void**) () at /usr/lib/libQt5Qml.so.5
#62 0x00007f1862d352eb in QMetaObject::activate(QObject*, int, int, void**) () at /usr/lib/libQt5Core.so.5
#63 0x00007f18643f3fb2 in QQmlVMEMetaObject::metaCall(QObject*, QMetaObject::Call, int, void**) () at /usr/lib/libQt5Qml.so.5
#64 0x00007f18644822b3 in  () at /usr/lib/libQt5Qml.so.5
#65 0x00007f1864482c5d in  () at /usr/lib/libQt5Qml.so.5
#66 0x00007f186447f3a4 in QQmlBinding::update(QFlags<QQmlPropertyData::WriteFlag>) () at /usr/lib/libQt5Qml.so.5
#67 0x00007f186445b43e in QQmlNotifier::emitNotify(QQmlNotifierEndpoint*, void**) () at /usr/lib/libQt5Qml.so.5
#68 0x00007f18643f84ff in QQmlData::signalEmitted(QAbstractDeclarativeData*, QObject*, int, void**) () at /usr/lib/libQt5Qml.so.5
#69 0x00007f1862d352eb in QMetaObject::activate(QObject*, int, int, void**) () at /usr/lib/libQt5Core.so.5
#70 0x00007f18643f3fb2 in QQmlVMEMetaObject::metaCall(QObject*, QMetaObject::Call, int, void**) () at /usr/lib/libQt5Qml.so.5
#71 0x00007f1864481f84 in  () at /usr/lib/libQt5Qml.so.5
#72 0x00007f1864482c5d in  () at /usr/lib/libQt5Qml.so.5
#73 0x00007f186447f3a4 in QQmlBinding::update(QFlags<QQmlPropertyData::WriteFlag>) () at /usr/lib/libQt5Qml.so.5
#74 0x00007f186445b43e in QQmlNotifier::emitNotify(QQmlNotifierEndpoint*, void**) () at /usr/lib/libQt5Qml.so.5
#75 0x00007f18643f84ff in QQmlData::signalEmitted(QAbstractDeclarativeData*, QObject*, int, void**) () at /usr/lib/libQt5Qml.so.5
#76 0x00007f1862d352eb in QMetaObject::activate(QObject*, int, int, void**) () at /usr/lib/libQt5Core.so.5
#77 0x00007f18643f3fb2 in QQmlVMEMetaObject::metaCall(QObject*, QMetaObject::Call, int, void**) () at /usr/lib/libQt5Qml.so.5
#78 0x00007f1864481f84 in  () at /usr/lib/libQt5Qml.so.5
#79 0x00007f1864482c5d in  () at /usr/lib/libQt5Qml.so.5
#80 0x00007f186447f3a4 in QQmlBinding::update(QFlags<QQmlPropertyData::WriteFlag>) () at /usr/lib/libQt5Qml.so.5
#81 0x00007f186445b43e in QQmlNotifier::emitNotify(QQmlNotifierEndpoint*, void**) () at /usr/lib/libQt5Qml.so.5
#82 0x00007f18643f84ff in QQmlData::signalEmitted(QAbstractDeclarativeData*, QObject*, int, void**) () at /usr/lib/libQt5Qml.so.5
#83 0x00007f1862d352eb in QMetaObject::activate(QObject*, int, int, void**) () at /usr/lib/libQt5Core.so.5
#84 0x00007f18643f3fb2 in QQmlVMEMetaObject::metaCall(QObject*, QMetaObject::Call, int, void**) () at /usr/lib/libQt5Qml.so.5
#85 0x00007f186434239c in QV4::QObjectWrapper::setProperty(QV4::ExecutionEngine*, QObject*, QQmlPropertyData*, QV4::Value const&) () at /usr/lib/libQt5Qml.so.5
#86 0x00007f186434337f in QV4::QObjectWrapper::setQmlProperty(QV4::ExecutionEngine*, QQmlContextData*, QObject*, QV4::String*, QV4::QObjectWrapper::RevisionMode, QV4::Value const&) () at /usr/lib/libQt5Qml.so.5
#87 0x00007f18643434d0 in QV4::QObjectWrapper::virtualPut(QV4::Managed*, QV4::PropertyKey, QV4::Value const&, QV4::Value*) () at /usr/lib/libQt5Qml.so.5
#88 0x00007f186430624c in QV4::Object::virtualResolveLookupSetter(QV4::Object*, QV4::ExecutionEngine*, QV4::Lookup*, QV4::Value const&) () at /usr/lib/libQt5Qml.so.5
#89 0x00007f18541ed605 in  ()
#90 0x0000000000000000 in  ()
[Inferior 1 (process 19673) detached]

Reported using DrKonqi
Comment 1 Karmanyaah Malhotra 2019-10-12 01:28:52 UTC
Rebooted and it works
Comment 2 Leandro 2019-10-17 14:40:50 UTC
Created attachment 123277 [details]
New crash information added by DrKonqi

latte-dock (0.9.3) using Qt 5.13.1

- What I was doing when the application crashed:
I changed the layout to unity, then I configured it a little. After playing around with the layout I switched back to default and the crash ocurred. 
Every time I try to switch to default latte crashes.

-- Backtrace (Reduced):
#5  0x000055acadb617f6 in Latte::Corona::availableScreenRectWithCriteria(int, QList<Latte::Types::Visibility>, QList<Plasma::Types::Location>) const ()
#6  0x000055acadc44a83 in Latte::WindowSystem::Tracker::Windows::updateAvailableScreenGeometries() ()
[...]
#9  0x000055acadb4ee63 in Latte::Corona::availableScreenRectChangedFrom(Latte::View*) ()
[...]
#11 0x000055acadb59b8b in Latte::ViewPart::Effects::qt_metacall(QMetaObject::Call, int, void**) ()
#12 0x00007f5b95ba1346 in QQmlPropertyPrivate::write(QObject*, QQmlPropertyData const&, QVariant const&, QQmlContextData*, QFlags<QQmlPropertyData::WriteFlag>) () at /usr/lib/libQt5Qml.so.5
Comment 3 John 2019-11-06 15:29:41 UTC
Created attachment 123753 [details]
New crash information added by DrKonqi

latte-dock (0.9.85) using Qt 5.13.2

- What I was doing when the application crashed:
Trying to change dock settings to add/remove widgets
- Custom settings of the application:
McMojave style theme with app launcher, task, and clock widgets in dock installed.

-- Backtrace (Reduced):
#5  0x0000000000000000 in  ()
#6  0x00007f52a46be8d7 in  () at /usr/lib/libQt5Quick.so.5
#7  0x00007f52a46be949 in  () at /usr/lib/libQt5Quick.so.5
#8  0x00007f52a48742f3 in  () at /usr/lib/libQt5Quick.so.5
#9  0x00007f529d9af72a in  () at /usr/lib/libQt5XcbQpa.so.5
Comment 4 Eve Kaczmarek 2019-11-06 15:58:40 UTC
Created attachment 123755 [details]
New crash information added by DrKonqi

latte-dock (0.9.4) using Qt 5.13.2

- What I was doing when the application crashed:
I trying to change from customized layout to default and play a little with settings. Application crashed when I switched back to customized.

-- Backtrace (Reduced):
#5  0x0000560bae580316 in Latte::Corona::availableScreenRectWithCriteria(int, QList<Latte::Types::Visibility>, QList<Plasma::Types::Location>) const ()
#6  0x0000560bae663c03 in Latte::WindowSystem::Tracker::Windows::updateAvailableScreenGeometries() ()
[...]
#9  0x0000560bae56cf83 in Latte::Corona::availableScreenRectChangedFrom(Latte::View*) ()
[...]
#11 0x0000560bae577dab in Latte::ViewPart::Effects::qt_metacall(QMetaObject::Call, int, void**) ()
#12 0x00007f6d5b8b6086 in QQmlPropertyPrivate::write(QObject*, QQmlPropertyData const&, QVariant const&, QQmlContextData*, QFlags<QQmlPropertyData::WriteFlag>) () at /usr/lib/libQt5Qml.so.5
Comment 5 Christoph Feck 2019-11-06 19:50:47 UTC
Apparently, it doesn't work for multiple other reporters, who keep adding their reports to a closed ticket. Reopening and reassigning.
Comment 6 Michail Vourlakos 2019-11-06 20:12:22 UTC
(In reply to Christoph Feck from comment #5)
> Apparently, it doesn't work for multiple other reporters, who keep adding
> their reports to a closed ticket. Reopening and reassigning.

what does not work?
Comment 7 Michail Vourlakos 2019-11-06 20:15:53 UTC
crash reports must follow https://userbase.kde.org/LatteDock/HowToReportCrashes in order to produce meaningful crash reports.


In my system the crash is NOT reproducable. The minimum that user must do is follow the above guide AND include a latte layout file that produces that crash in its system.
Comment 8 Christoph Feck 2019-11-06 20:19:28 UTC
The original reporter closed this ticket with comment #1.
Comment 9 Michail Vourlakos 2019-11-13 14:23:50 UTC
Git commit 062fde2e80ca7d7334606c37113ea92e87f0c72f by Michail Vourlakos.
Committed on 13/11/2019 at 14:21.
Pushed by mvourlakos into branch 'v0.9'.

dont crash when changing layouts

--occasionaly when the user was switching
layouts it could get some crashes. It looks
safer to unload first the Latte::Views objects
and their corresponding containments afterwards.
I tried in my system to switch multiple layouts
in plenty different configurations and I could
not get a crash. This patch should fix the
mentioned crash report if that was the root
of the issue.
FIXED-IN:0.9.5

M  +19   -15   app/layout/genericlayout.cpp
M  +2    -2    app/layouts/synchronizer.cpp

https://commits.kde.org/latte-dock/062fde2e80ca7d7334606c37113ea92e87f0c72f
Comment 10 Michail Vourlakos 2019-11-13 14:24:17 UTC
Git commit 61016444fbb2959cccd03da6e77a24371b7e8a24 by Michail Vourlakos.
Committed on 13/11/2019 at 14:24.
Pushed by mvourlakos into branch 'master'.

dont crash when changing layouts

--occasionaly when the user was switching
layouts it could get some crashes. It looks
safer to unload first the Latte::Views objects
and their corresponding containments afterwards.
I tried in my system to switch multiple layouts
in plenty different configurations and I could
not get a crash. This patch should fix the
mentioned crash report if that was the root
of the issue.
FIXED-IN:0.9.5

M  +19   -15   app/layout/genericlayout.cpp
M  +2    -2    app/layouts/synchronizer.cpp

https://commits.kde.org/latte-dock/61016444fbb2959cccd03da6e77a24371b7e8a24